package com.example.studentportal.common.usecase

data class DefaultError(val message: String)
